refining css and setting route root as welcome#index

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+// https://group-project3155-zpaden.c9users.io/welcome/index
+h1 {
+    font-family: Impact, Verdana;
+    color: #D4AFFF;
+}
+
+body
+{
+    font-family: Verdana, Helvetica;
+    background-image: url("assets/images/AvengerSymbol.png");
+    background-color: #f9f9f9;
+}
