--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,8 @@
-<h1>Welcome to COMP SCI HEROS</h1>
+<h1>COMP SCI HEROS</h1>
 
 <p>Welcome to the home page for the COMP SCI HEROS group in ITSC 3155!</p>
 
 <!-- TODO: When the app index is created change the link to that. Change button to be fancy -->
 
-<p> Click <a>here</a> to go to the main page.</p>
+<p> Click <a href= "https://en.wikipedia.org/wiki/Batman">here</a> to go to the main page.</p>
 
