--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 // https://group-project3155-zpaden.c9users.io/welcome/index
+// Color Palette: http://www.color-hex.com/color-palette/25436
 h1 {
     font-family: Impact, Verdana;
     font-size: 75px;
