Updated index and javascripts with maps

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,5 +4,5 @@
 
 <!-- TODO: When the app index is created change the link to that. Change button to be fancy -->
 
-<p>Click <a href= "https://en.wikipedia.org/wiki/Batman">here</a> to go to the main page.</p>
+<%= link_to 'Main Page', reports_path() %>
 
