--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
-<h1>COMP SCI HEROS</h1>
+<h1>COMP SCI HEROES Inc.</h1>
 
-<p>Welcome to the home page for the COMP SCI HEROS group in ITSC 3155!</p>
+<p>Are you being harrassed and need a Super Hero to save you?</p>
 
 <!-- TODO: When the app index is created change the link to that. Change button to be fancy -->
 
