Fixed needing to reload to view map and map text color

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,17 +4,15 @@
 // https://group-project3155-zpaden.c9users.io/welcome/index
 // Color Palette: http://www.color-hex.com/color-palette/25436
 
-
 h1 {
     font-family: Georgia,serif;
     font-size: 46px;
     color: #191970;
-    position: center;
+    text-align: center;
 }
 
 body
 {
-    
     //background-image: url("../images/AvengerSymbol.png");
     background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Symbol_from_Marvel%27s_The_Avengers_logo.svg/2000px-Symbol_from_Marvel%27s_The_Avengers_logo.svg.png");
     background-size: 600px;
@@ -27,3 +25,4 @@ p{
     font-family: "Helvetica Neue", "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
     color: #251c38;
 }
+
