--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,5 +4,5 @@
 
 <!-- TODO: When the app index is created change the link to that. Change button to be fancy -->
 
-<%= link_to 'Main Page', reports_path() %>
+<div id="link"> <%= link_to 'Report Listing', reports_path(), :id => "link", 'data-no-turbolink' => true %> </div>
 
