--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,8 @@
-<link href='https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+<h1>COMP SCI HEROES Inc.</h1>
 
-<h1>CompSci HEROES inc.</h1>
+<p>Are you being harrassed and need a Super Hero to save you?</p>
 
 <!-- TODO: When the app index is created change the link to that. Change button to be fancy -->
 
-<p><a><%= link_to 'Are You In Danger?', reports_path(), 'data-no-turbolink' => true %></a></p>
+<%= link_to 'Report Listing', reports_path(), 'data-no-turbolink' => true %>
 
