Install and configure rspec and capybara git status q

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,5 +4,7 @@
 
 <!-- TODO: When the app index is created change the link to that. Change button to be fancy -->
 
-<%= link_to 'Report Listing', reports_path(), 'data-no-turbolink' => true %>
+<button class="button button1"><%= link_to 'Report Listing', reports_path(), 'data-no-turbolink' => true %></button>
+
+
 
