--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -15,7 +15,7 @@
 </script>
   
   
-<%= link_to 'New Report', new_report_path %>
+<button class="button button3"><%= link_to 'New Report', new_report_path %></button>
 
 <table>
   <tr>
