--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -17,6 +17,10 @@ h2{
     color: #33394c;
 }
 
+p{
+    text-align: center;
+}
+
 body
 {
     //background-image: url("../images/AvengerSymbol.png");
@@ -28,7 +32,7 @@ body
 }
 
 .button {
-    background-color: #4CAF50; /* Green */
+    background-color: #529ecc; 
     border: none;
     color: white;
     padding: 16px 32px;
@@ -45,11 +49,11 @@ body
 .button1 {
     background-color: white; 
     color: black; 
-    border: 2px solid #4CAF50;
+    border: 2px solid #529ecc;
 }
 
 .button1:hover {
-    background-color: #4CAF50;
+    background-color: #529ecc;
     color: white;
 }
 
