--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -16,13 +16,14 @@
   
   
 <button class="button button3"><%= link_to 'New Report', new_report_path %></button>
-
+<button class="button button3" a = "/reports/new"></button>
 <table>
   <tr>
     <th>Title</th>
     <th>Location</th>
     <th>Description</th>
     <th>Email</th>
+    <th>Controls</th>
   </tr>
  
   <% @reports.each do |report| %>
@@ -32,7 +33,6 @@
       <td><%= report.desc %></td>
       <td><%= report.email %></td>
       <td><%= link_to 'Show', report_path(report) %></td>
-      <td><%= link_to 'Edit', edit_report_path(report) %></td>
      
     </tr>
   <% end %>
