--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,9 @@
 <h1>COMP SCI HEROES Inc.</h1>
 
-<p>Are you being harrassed and need a Super Hero to save you?</p>
+<p>Do you need a hero to help?</p>
 
-<!-- TODO: When the app index is created change the link to that. Change button to be fancy -->
-
-<button class="button button1"><%= link_to 'Report Listing', reports_path(), 'data-no-turbolink' => true %></button>
-
+<div style="text-align:center;">
+    <button class = "button button3" onclick="location.href='/reports/'">Enter Site.</button>
+</div>
 
 
