--- a/app/views/reports/edit.html.erb
+++ b/app/views/reports/edit.html.erb
@@ -2,4 +2,4 @@
  
 <%= render 'form' %>
 
-<%= link_to 'Back', reports_path %>
+<button class = "button button3" onclick="location.href='/reports/'">Back</button>
