--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,4 +1,4 @@
 <h2>New Report</h2>
 
 <%= render 'form' %>
-<%= link_to 'Back', reports_path %>
+<button class = "button button3" onclick="location.href='/reports/'">Back</button>
