--- a/app/views/heroes/show.html.erb
+++ b/app/views/heroes/show.html.erb
@@ -1,11 +1,11 @@
 <p>
     <strong>Name:</strong>
-    <%= @report.name %>
+    <%= @hero.name %>
 </p> 
 
 <p>
     <strong>Ability:</strong>
-    <%= @report.ability %>
+    <%= @hero.ability %>
 </p> 
 
 <%= link_to 'Hero List', hero_path %>
