--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -2,9 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+//colors
+$grey: #eff0f4;
+$blue: #001f63;
+$lightblue: #246fb4;
+
+
 //Button
 .button {
-    background-color: #f44336; 
+    background-color: $lightblue; 
     border: none;
     color: white;
     padding: 16px 32px;
@@ -21,12 +27,37 @@
 .button3 {
     background-color: white; 
     color: black; 
-    border: 2px solid #f44336;
+    border: 2px solid $lightblue;
 }
 
 .button3:hover {
-    background-color: #f44336;
+    background-color: $blue;
     color: white;
+}
+
+//Title and Text field
+input[type=text] {
+    width: 50%;
+    padding: 12px 12px;
+    border: 2px solid $blue;
+    top: -20px;
+    left: 20px;
+}
+
+textarea{
+    width: 50%;
+    height: 200px;
+    padding: 12px 12px;
+    border: 2px solid $blue;
+}
+        
+input[type=button], input[type=submit] {
+    background-color: $lightblue;
+    float: right;
+    border: none;
+    color: white;
+    padding: 16px 20px;
+    text-decoration: none;
 }
 
 //Map
@@ -85,4 +116,5 @@ td {
 tr:nth-child(even) {
      background: #ffffff;
 }
+
 
