--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,56 +4,147 @@
 // https://group-project3155-zpaden.c9users.io/welcome/index
 // Color Palette: http://www.color-hex.com/color-palette/25436
 
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,900);
+
+//colors
+$grey: #eff0f4;
+$blue: #001f63;
+$lightblue: #246fb4;
+
+//base styles
+
+* {
+  box-sizing: inherit;
+  transition-property: all;
+  transition-duration: .6s;
+  transition-timing-function: ease;
+}
+
+html,
+body {
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  background: $grey;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+}
+
+.welcome {
+  display: table;
+  height: 100%;
+  width: 100%;
+}
+
+.container { 
+  display: table-cell;
+  padding: 1em;
+  text-align: center; 
+  vertical-align: middle;
+}
+
 h1 {
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 46px;
-    color: #191970;
-    text-align: center;
+  color: $blue;
+  font-size: 1.25em;
+  font-weight: 900;
+  margin: 0 0 2em;
+  
+  @media (min-width: 450px) {
+    font-size: 1.75em;
+  }
+  
+  @media (min-width: 760px) {
+    font-size: 3.25em;
+  }
+  
+  @media (min-width: 900px) {
+    font-size: 5.25em;
+    margin: 0 0 1em;
+  }
 }
 
-h2{
-    font-family: 'Playfair Display', serif;
-    text-align: center;
-    color: #33394c;
-}
 
-p{
-    text-align: center;
-}
-
-body
-{
-    //background-image: url("../images/AvengerSymbol.png");
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Symbol_from_Marvel%27s_The_Avengers_logo.svg/2000px-Symbol_from_Marvel%27s_The_Avengers_logo.svg.png");
-    background-size: 250px;
-    background-repeat: no-repeat;
-    background-color: #eff0f4;
-    background-position: right top;
-}
-
-.button {
-    background-color: #529ecc; 
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
+//default button
+.btn {
+  color: $lightblue;
+  cursor: pointer;
+  display: block;
+  font-size:16px;
+  font-weight: 400;
+  line-height: 45px;
+  margin: 0 auto 2em;
+  max-width: 160px; 
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  vertical-align: middle;
+  width: 100%; 
+  
+  @media(min-width: 400px) {
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    cursor: pointer;
+    margin-right: 2.5em;
+  
+    &:nth-of-type(even) {
+      margin-right: 0;
+    }
+  }
+  
+  @media(min-width: 600px) {
+  
+    &:nth-of-type(even) {
+      margin-right: 2.5em;
+    }
+    
+    &:nth-of-type(5) {
+      margin-right: 0;
+    }
+    
+  }
+  
+  &:hover { text-decoration: none; }
+  
 }
 
-.button1 {
-    background-color: white; 
-    color: black; 
-    border: 2px solid #529ecc;
+////////////////////////////
+//button two
+//////////////////////////
+.btn-2 {
+    letter-spacing: 0;
 }
 
-.button1:hover {
-    background-color: #529ecc;
-    color: white;
+.btn-2:hover,
+.btn-2:active {
+  letter-spacing: 5px;
 }
+
+.btn-2:after,
+.btn-2:before {
+  backface-visibility: hidden;
+  border: 1px solid rgba($lightblue, 0);
+  bottom: 0px;
+  content: " ";
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  transition: all 280ms ease-in-out;
+  width: 0;
+}
+
+.btn-2:hover:after,
+.btn-2:hover:before {
+  backface-visibility: hidden;
+  border-color: $lightblue;
+  transition: width 350ms ease-in-out;
+  width: 70%;
+}
+
+.btn-2:hover:before {
+  bottom: auto;
+  top: 0;
+  width: 70%;
+}
+
 
