--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,10 @@
-<h1>COMP SCI HEROES Inc.</h1>
-
-<p>Do you need a hero to help?</p>
-
-<div style="text-align:center;">
-    <button class = "button button3" onclick="location.href='/reports/'">Enter Site.</button>
-</div>
+<section class="welcome">
+  <div class="container">
+      
+    <h1>COMP SCI HEROES Inc.</h1>
+    <a onclick="location.href='/reports/'" class="btn btn-2">Enter Site.</a>
+    
+  </div>
+</section>
 
 
