--- a/app/views/heroes/new.html.erb
+++ b/app/views/heroes/new.html.erb
@@ -1,4 +1,5 @@
-<h3>New Hero</h3>
+<h2>New Hero</h2>
 
 <%= render 'form' %>
-<%= link_to 'Back', hero_path %>
+
+<button class = "button button3" onclick="location.href='/Heroes/'">Back</button>
