--- a/app/views/report_mailer/destroyed_mail.html.erb
+++ b/app/views/report_mailer/destroyed_mail.html.erb
@@ -4,4 +4,9 @@
         <%= @report.desc %>
     </p>
     
+    <p>
+        If you'd like, you may leave a testimonial of your experience 
+        <a href = "https://group-project3155-zpaden.c9users.io/testimonials/new">here</a>. Thanks for choosing Comp Sci HEROS, INC.
+    </p>
+    
 </html>
