--- a/app/views/heroes/edit.html.erb
+++ b/app/views/heroes/edit.html.erb
@@ -1,5 +1,5 @@
-<h3>Hero Edit</h3>
+<h2>Editing hero</h2>
  
 <%= render 'form' %>
 
-<%= link_to 'Back', reports_path %>
+<button class = "button button3" onclick="location.href='/reports/'">Back</button>
