--- a/app/views/heroes/index.html.erb
+++ b/app/views/heroes/index.html.erb
@@ -1,24 +1,3 @@
-<h3> Heroes </h3>
+<h1 style = 'font-size:30px;'>Your Heroes: </h1>
 
-<p> Current Super HERO </p>
-<%= link_to 'SuperHero', new_heroes_path %>
-
-<table>
-    <th>Name:</th>
-    <th>Bio:</th>
-    
-<% @Heroes.each do |hero| %>
-    <tr>
-        <td><% hero.name %></td>
-        <td><% hero.bio %></td>
-        
-        <td><% link_to 'show', hero_path(hero) %></td>
-        <td><% link_to 'Edit', edit_report_path%></td>
-        <td><% link_to 'destroy' 
-                                hero_path(hero)
-                                method: :delete,
-                                data:{confirm: 'are you sure?'%></td>
-        
-    </tr>
-    <% end %>
-</table>
+<button class = "button button3" onclick="location.href='/reports/'">Back</button>
