--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,5 +1,6 @@
-<h2>Listing Reports</h2>
-
+<h2 style = 'display:inline;'>Listing Reports</h2>
+<h3 style = 'display:inline; margin-left:30px;'>  <%= link_to "Testimonials", testimonials_path() %> </h3>
+<h4 style = 'display:inline; margin-left:20px;'>  <%= link_to "Heroes", heroes_path() %> </h3>
 
 <div style='width: 800px;'> 
     <div id="map" style='width: 800px; height: 400px;'></div>
