--- a/app/assets/stylesheets/testimonials.scss
+++ b/app/assets/stylesheets/testimonials.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Testimonials controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.testimonial{
+    
+    margin: 50px 80px 50px;
+}
+
+.button {
+   margin: center;
+}
