--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,7 +4,7 @@
 // https://group-project3155-zpaden.c9users.io/welcome/index
 // Color Palette: http://www.color-hex.com/color-palette/25436
 
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,900);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,900);
 
 //colors
 $grey: #eff0f4;
