--- a/app/views/reports/edit.html.erb
+++ b/app/views/reports/edit.html.erb
@@ -1,4 +1,18 @@
-<h2>Editing report</h2>
+<header>
+    <div class="container">
+      <h2 class="logo">Editing Report</h2>
+      <nav>
+        <ul>
+          <li><a href="/welcome/index">Home</a></li>
+          <li><a href ="/reports/">Listing Reports</a></li>
+          <li><a href="/testimonials">Testimonials</a></li>
+          <li><a href="/heroes">Heroes</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+
  
 <%= render 'form' %>
 
