--- a/app/views/testimonials/new.html.erb
+++ b/app/views/testimonials/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New Testimonial</h1>
+<header>
+    <div class="container">
+      <h2 class="logo">New Testimonials</h2>
+      <nav>
+        <ul>
+          <li><a href="/welcome/index">Home</a></li>
+          <li><a href ="/reports/">Listing Reports</a></li>
+          <li><a href="/testimonials">Testimonials</a></li>
+          <li><a href="/heroes">Heroes</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', testimonials_path %>
