--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,8 +1,19 @@
-<h2 style = 'display:inline;'>Listing Reports</h2>
-<h3 style = 'display:inline; margin-left:30px;'>  <%= link_to "Testimonials", testimonials_path() %> </h3>
-<h4 style = 'display:inline; margin-left:20px;'>  <%= link_to "Heroes", heroes_path() %> </h3>
+<header>
+    <div class="container">
+      <h2 class="logo">Listing Report</h2>
+      <nav>
+        <ul>
+          <li><a href="/welcome/index">Home</a></li>
+          <li><a href ="/reports/">Listing Reports</a></li>
+          <li><a href="/testimonials">Testimonials</a></li>
+          <li><a href="/heroes">Heroes</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-<div style='width: 800px;'> 
+
+<div style='width: 800px; margin: center;  padding-top:10px;' id  = "map-container"> 
     <div id="map" style='width: 800px; height: 400px;'></div>
 </div>
 
@@ -24,8 +35,6 @@
     <th>Title</th>
     <th>Location</th>
     <th>Description</th>
-    <th>Email</th>
-    <th>Controls</th>
   </tr>
  
   <% @reports.each do |report| %>
@@ -33,8 +42,6 @@
       <td><%= report.title %></td>
       <td><%= report.location %></td>
       <td><%= report.desc %></td>
-      <td><%= report.email %></td>
-      <td><%= link_to 'Show', report_path(report) %></td>
      
     </tr>
   <% end %>
