--- a/app/views/heroes/index.html.erb
+++ b/app/views/heroes/index.html.erb
@@ -1,3 +1,25 @@
-<h1 style = 'font-size:30px;'>Your Heroes: </h1>
+<header>
+    <div class="container">
+      <h2 class="logo">Your Heroes</h2>
+      <nav>
+        <ul>
+          <li>   <a href ="/reports/"><p id="navbar_p">Listing Reports</p></a></li>
+          <li><a href="/testimonials"><p id="navbar_p">Testimonials</p></a></li>
+          <li>      <a href="/heroes"><p id="navbar_p">Heroes</p></a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-<button class = "button button3" onclick="location.href='/reports/'">Back</button>
+<div>
+    <h2 style = 'font-size:26px;'>Superman: </h2>
+        <%= image_tag("spiderman.png") %>
+
+    <h2 style = 'font-size:26px;'>Superman: </h2>
+        <%= image_tag("superman.png") %>
+
+    <p style="width: 500px;">
+        <img image_tag("superman.png") style="float: right;" />
+        This is some text
+    </p> 
+</div>
