--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -13,7 +13,8 @@
       </ul>
     </div>
   <% end %>
- 
+
+<div id ="form">
   <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
@@ -37,5 +38,6 @@
   <p>
     <%= f.submit %>
   </p>
- 
+  
+</div>
 <% end %>
