--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -3,10 +3,11 @@
       <h2 class="logo">Listing Report</h2>
       <nav>
         <ul>
-          <li><a href="/welcome/index">Home</a></li>
-          <li><a href ="/reports/">Listing Reports</a></li>
-          <li><a href="/testimonials">Testimonials</a></li>
-          <li><a href="/heroes">Heroes</a></li>
+          
+            <li><a href ="/reports/"><p id = "navbar_lis" >Listing Reports</p></a></li>
+            <li><a href="/testimonials"><p id = "navbar_lis" >Testimonials</p></a></li>
+            <li><a href="/heroes"><p id = "navbar_lis" >Heroes</p></a></li>
+          
         </ul>
       </nav>
     </div>
