--- a/app/views/testimonials/_form.html.erb
+++ b/app/views/testimonials/_form.html.erb
@@ -13,25 +13,26 @@
       </ul>
     </div>
   <% end %>
- 
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
-  
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
- 
-  <p>
-    <%= f.label :desc %><br>
-    <%= f.text_area :desc %>
-  </p>
-  
- 
-  <p>
-    <%= f.submit %>
-  </p>
- 
+
+<div id = "form">
+    <p>
+      <%= f.label :title %><br>
+      <%= f.text_field :title %>
+    </p>
+    
+    <p>
+      <%= f.label :name %><br>
+      <%= f.text_field :name %>
+    </p>
+   
+    <p>
+      <%= f.label :desc %><br>
+      <%= f.text_area :desc %>
+    </p>
+    
+   
+    <p>
+      <%= f.submit %>
+    </p>
+ </div>
 <% end %>
