--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <section class="welcome">
   <div class="container">
       
-    <h1>COMP SCI HEROES Inc.</h1>
+    <h1>COMP SCI HEROES</h1>
     <a onclick="location.href='/reports/'" class="btn btn-2">Enter Site.</a>
     
   </div>
