--- a/app/assets/stylesheets/heroes.scss
+++ b/app/assets/stylesheets/heroes.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Heroes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+image {
+  width: 260px;
+  height: 180px
+}
+
+#navbar_p{
+  color:white;
+}
