--- a/app/views/heroes/new.html.erb
+++ b/app/views/heroes/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<button class = "button button3" onclick="location.href='/Heroes/'">Back</button>
+<button class = "button button3" onclick="location.href='/heroes/'">Back</button>
